# zephyr

./: west.yml
boards/common/: xmodem1k_sender.board.cmake
boards/ti/am243x_evm/: Kconfig.am243x_evm  am243x_evm_am2434_m4.dts  board.yml  (+8 more)
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.am13e  Kconfig.tisci  clock_control_am13e.c  clock_control_tisci.c
drivers/counter/: CMakeLists.txt  Kconfig  counter_k3_rtc.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.ti_am13  dma_ti_am13.c  dma_ti_edma.c
drivers/firmware/: CMakeLists.txt  Kconfig
drivers/flash/: flash_mspi_infineon_s25h.c  flash_mspi_infineon_s25h.h
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.msp
drivers/i2c/: CMakeLists.txt  Kconfig
drivers/interrupt_controller/: intc_vim.c
drivers/mbox/: CMakeLists.txt  Kconfig  Kconfig.ti_secproxy  mbox_ti_secproxy.c
drivers/mspi/: CMakeLists.txt  Kconfig.ti_k3  mspi_cadence.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_msp.c
drivers/pwm/: CMakeLists.txt  Kconfig
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.msp  Kconfig.ns16550  uart_ns16550.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.ti_unicomm  spi_omap_mcspi.c  spi_ti_unicomm.c
drivers/syscon/: syscon_bflb_efuse.c
drivers/watchdog/: wdt_ti_rti.c
modules/: Kconfig  Kconfig.am13
samples/drivers/uart/xmodem1k_flasher/: CMakeLists.txt  README.rst  prj.conf
samples/drivers/uart/xmodem1k_flasher/src/: main.c
samples/i2c_loopback_test/: CMakeLists.txt  prj.conf
scripts/ci/: check_compliance.py
scripts/support/: ti-k3-rom-image-gen.py  xmodem1k_sender.py
(+120 files in other folders)
